// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Check if routes work  renders About page correctly in the proper route. 1`] = `
Array [
  <header
    className="header"
  >
    <img
      alt="Logo"
      className="logo"
      src="pokedex.png"
    />
    <ul
      className="mainNav"
    >
      <a
        className="linkStyle"
        href="/"
        onClick={[Function]}
      >
        Home 
      </a>
      <a
        className="linkStyle"
        href="/about"
        onClick={[Function]}
      >
        About 
      </a>
    </ul>
  </header>,
  <div
    className="header"
  >
    <h1>
      Hi There!
    </h1>
    <p>
      This project is part of the Microverse React Capstone
    </p>
  </div>,
]
`;

exports[`Check if routes work  renders Home page correctly in the proper route. 1`] = `
Array [
  <header
    className="header"
  >
    <img
      alt="Logo"
      className="logo"
      src="pokedex.png"
    />
    <ul
      className="mainNav"
    >
      <a
        className="linkStyle"
        href="/"
        onClick={[Function]}
      >
        Home 
      </a>
      <a
        className="linkStyle"
        href="/about"
        onClick={[Function]}
      >
        About 
      </a>
    </ul>
  </header>,
  <div
    className="header"
  >
    <h1>
      Welcome to the PokeDex
    </h1>
    <p>
      Click your favorite Pokemon below
    </p>
  </div>,
  <div
    className="catDiv"
  >
    <div
      className="customSelect"
    >
      <select
        onChange={[Function]}
      >
        <option
          value="All"
        >
          All
        </option>
        <option
          value="Normal"
        >
          Normal
        </option>
        <option
          value="Fighting"
        >
          Fighting
        </option>
        <option
          value="Flying"
        >
          Flying
        </option>
        <option
          value="Poison"
        >
          Poison
        </option>
        <option
          value="Ground"
        >
          Ground
        </option>
        <option
          value="Rock"
        >
          Rock
        </option>
        <option
          value="Bug"
        >
          Bug
        </option>
        <option
          value="Ghost"
        >
          Ghost
        </option>
        <option
          value="Steel"
        >
          Steel
        </option>
        <option
          value="Fire"
        >
          Fire
        </option>
        <option
          value="Water"
        >
          Water
        </option>
        <option
          value="Grass"
        >
          Grass
        </option>
        <option
          value="Electric"
        >
          Electric
        </option>
        <option
          value="Psychic"
        >
          Psychic
        </option>
        <option
          value="Ice"
        >
          Ice
        </option>
        <option
          value="Dragon"
        >
          Dragon
        </option>
        <option
          value="Dark"
        >
          Dark
        </option>
        <option
          value="Fairy"
        >
          Fairy
        </option>
      </select>
    </div>
  </div>,
  <div
    className="pokeDiv"
  >
    <div />
  </div>,
]
`;

exports[`Check if routes work  renders Navbar page correctly in the proper route. 1`] = `
<header
  className="header"
>
  <img
    alt="Logo"
    className="logo"
    src="pokedex.png"
  />
  <ul
    className="mainNav"
  >
    <a
      className="linkStyle"
      href="/"
      onClick={[Function]}
    >
      Home 
    </a>
    <a
      className="linkStyle"
      href="/about"
      onClick={[Function]}
    >
      About 
    </a>
  </ul>
</header>
`;

exports[`Check if routes work  renders Pokemon page correctly in the proper route. 1`] = `
<p>
  Fetching Data...
</p>
`;
